--- a/web/php/config.ini
+++ b/web/php/config.ini
@@ -1,5 +1,7 @@
 #MYSQL config file
-MYSQL_HOST	59.64.138.184
+MYSQL_HOST	127.0.0.1 
+#59.64.138.184
 MYSQL_USER	root
 MYSQL_PSW	123
-MYSQL_DB	buptyq
+MYSQL_DB	test 
+#buptyq
